# recentf

./: Cargo.nix  Cargo.toml  flake.nix  rustfmt.toml  sqlx-data.json
.github/workflows/: CI.yaml
libs/hisfile/: .env  Cargo.toml
libs/hisfile/migrations/: 20230212203746_init.sql
libs/hisfile/src/: config.rs  file.rs  lib.rs  tramp.rs
libs/pathtrie/: Cargo.toml
libs/pathtrie/src/: format.rs  iter.rs  lib.rs  node.rs
migrations/: 20230215205426_init.sql
src/: bin.rs  clean.rs  config.rs  lib.rs  main.rs  scored_paths.rs  search.rs  tree.rs  upsert.rs
src/database/: mod.rs  search.rs  tramp_db.rs
src/search/: candidates.rs  format.rs  mod.rs
src/tramp/: alias.rs  mod.rs
tests/: database_test.rs
tests/common/: db.rs  mod.rs  search.rs
