[package]
name = "recentf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hisfile = {path = "libs/hisfile"}
pathtrie = {path = "libs/pathtrie"}
clap = { version = "3.2.3", features = ["derive"] } 
anyhow = "1.0.69"

[workspace]
members = [
    "libs/hisfile",
    "libs/pathtrie",
]