[package]
name = "recentf"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathtrie = {path = "libs/pathtrie"}
clap = { version = "4.1", features = ["derive"] } 
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "offline"] }
itertools = "0.10.5"
once_cell = "1.17.1"
bimap = { version = "0.6.2", features = ["serde"] }
toml = { version = "0.7.2", features = ["parse"] }

[workspace]
members = [
    "libs/pathtrie",
]
